--- a/ApiPokemon/Index.html
+++ b/ApiPokemon/Index.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-black">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="assets/img/og-default-image.jpeg"  alt=""></a>
+          <a class="navbar-brand" href="#"><img src="assets/img/imgpokemon.png"   alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
