--- a/ApiPokemon/Index.html
+++ b/ApiPokemon/Index.html
@@ -13,8 +13,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
-  <nav class="navbar navbar-dark text-bg-danger ">
+<body class="bg-warning">
+  <nav class="navbar navbar-dark bg-danger ">
     <div class="container">
       <a class="navbar-brand"><img src="assets/img/pokeapi.png" class="w-50" alt=""></a>
       <form class="d-flex" role="search">
@@ -26,8 +26,10 @@
   </nav>
 
   <div class="container mt-5">
-    <div class="row-cols-2 row-cols-md-4" id="Infodatos"></div>
+    <div class="row row-cols-2 row-cols-md-5 gap-5 d-flex justify-content-center align-items-center" id="Infodatos"></div>
+    <section id="botonesPages" class="d-flex justify-content-between align-items-center my-5"></section>
   </div>
+  
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
