--- a/ApiPokemon/Index.html
+++ b/ApiPokemon/Index.html
@@ -18,8 +18,8 @@
     <div class="container">
       <a class="navbar-brand"><img src="assets/img/pokeapi.png" class="w-50" alt=""></a>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search">
-        <button class="btn btn-outline-warning fw-bold" type="button"><i class="fa-solid fa-magnifying-glass"></i>
+        <input class="form-control me-2" id="inputSearch" type="search" placeholder="Search">
+        <button class="btn btn-outline-warning fw-bold" type="button" id="btnBusqueda"><i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </form>
     </div>
